@@ -1,5 +1,7 @@
 
 Version 0.7	- xx July 2001
+  * Add check for static class attributes
+  * Fix checking of module attributes
   * Fix wrong filename in 'Base class (xxx) __init__() not called'
   	when doing a from X import *
   * Fix 'No attribute found' for very dynamic classes
